--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,7 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
 line-height: 1.25px;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
-padding-left: 16px;
+
 }
 
 
@@ -738,6 +738,7 @@ font-size: 16px;
 line-height: 1.25px;
 letter-spacing: 0.03em;
 color:#FFFFFF;
+padding-left: 16px;
 }
 
 
@@ -790,7 +791,7 @@ margin-right: 8px;
 
 }
 
-.modal-form {
+.modal-sheet {
     position: absolute ;
     display: flex;
     flex-direction: column;
@@ -822,6 +823,7 @@ gap:4px;
 height: 40px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
+padding-left: 40px;
 
 
 }
@@ -886,6 +888,8 @@ height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 margin-top:4px;
+padding-left:16px;
+padding-top: 12px;
 }
 
 .checkbox {
@@ -906,27 +910,9 @@ margin-top:25px;
     letter-spacing: 0.03em; 
 }
 
-.checkbox-icon {
-    appearance: none;
-    outline:none;
-}
-
-.checkbox-active {
-    background-color: #2196F3;
-    position: absolute;
-    bottom:-2px;
-    right:-2px;
-}
 
 
-.checkbox-style {
-    border: 2px solid rgba(33, 33, 33, 1);
-    width:16px;
-    height:15px;
-    position: relative;
-    visibility:none;
-    opacity:0;
-}
+
 
 .form-icons:focus-within {
     outline-color: #2196F3;
@@ -938,8 +924,7 @@ textarea::placeholder {
     line-height: 1.2;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
-    padding-top:12px;
-    padding-left: 16px;
+    
     
     
 }
