--- a/css/styles.css
+++ b/css/styles.css
@@ -739,6 +739,8 @@ line-height: 1.25px;
 letter-spacing: 0.03em;
 color:#FFFFFF;
 padding-left: 16px;
+outline-color:#2196F3;
+transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; 
 }
 
 
@@ -890,6 +892,8 @@ border-radius: 4px;
 margin-top:4px;
 padding-left:16px;
 padding-top: 12px;
+outline-color:#2196F3;
+    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; 
 }
 
 .checkbox {
@@ -909,15 +913,36 @@ margin-top:25px;
     line-height: 1.7px;
     letter-spacing: 0.03em; 
 }
+.checkbox-label::before {
+    display: inline-block;
+    content: "";
+    width:16px;
+    height:15px;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    margin-right:7px ;
+}
 
+.checkbox-policy:checked + .checkbox-label::before {
+background-color: #2196F3;
+border: none;
+background-image: url(../images/check.svg);
+background-repeat: no-repeat;
 
+}
+
+.checkbox-policy {
+    appearance: none;
+    opacity: 0;
+}
 
 
 
 .form-icons:focus-within {
     outline-color: #2196F3;
+    border-color: #2196F3;
   fill:#2196F3;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
 }
 textarea::placeholder {
     font-size: 12px;
@@ -928,3 +953,11 @@ textarea::placeholder {
     
     
 }
+
+ .form-icons> input:focus-within {
+    outline-color:#2196F3;
+    transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; 
+ }
+
+ 
+
